Fix focus clipping in tag (#2660)

--- a/packages/components/tag/src/tag.scss
+++ b/packages/components/tag/src/tag.scss
@@ -57,6 +57,8 @@
 
 :host(:focus-visible) {
   outline-color: var(--sl-color-border-focused);
+  position: relative;
+  z-index: 1; // Make sure the focus ring is above other elements
 }
 
 slot {
